kubernetes/utility/apps/flux-system/flux-instance/webhook/http-route.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-webhook-receiver
  annotations:
    external-dns/cloudflare: "true"
    external-dns/unifi: "true"
spec:
  hostnames:
    # - flux-webhook.utility.techtales.io
    - flux-webhook-utility.techtales.io
  parentRefs:
    - name: envoy
      namespace: networking
      sectionName: https
  rules:
    - backendRefs:
        - name: webhook-receiver
          namespace: flux-system
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /hook/
